--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/Magador/magnet-manager",
   "dependencies": {
+    "connect-mongo": "^0.8.0",
     "express": "^4.12.3",
+    "express-session": "^1.10.4",
     "mongoose": "^4.0.0"
   }
 }
