--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "homepage": "https://github.com/Magador/magnet-manager",
   "dependencies": {
+    "body-parser": "^1.12.2",
     "connect-mongo": "^0.8.0",
     "express": "^4.12.3",
     "express-session": "^1.10.4",
-    "mongoose": "^4.0.0"
+    "mongoose": "^4.0.1",
+    "serve-static": "^1.9.2"
   }
 }
