--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "connect-mongo": "^0.8.0",
     "express": "^4.12.3",
     "express-session": "^1.10.4",
-    "mongoose": "^4.0.1",
-    "serve-static": "^1.9.2"
+    "mongoose": "^4.0.1"
   }
 }
