--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Web manager for movies and series watched over Torrent network.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "mongod --dbpath=./db --port 27017 && node index"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
