--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "connect-mongo": "^0.8.0",
     "express": "^4.12.3",
     "express-session": "^1.10.4",
-    "mongoose": "^4.0.1"
+    "jade": "^1.9.2",
+    "mongoose": "^4.0.1",
+    "request": "^2.55.0"
   }
 }
