--- a/static/bower.json
+++ b/static/bower.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "prefixfree": "LeaVerou/prefixfree#gh-pages",
     "typicons": "~2.0.7",
-    "microajax": "~0.3.0"
+    "microajax": "~0.3.0",
+    "material-design-lite": "~1.0.0"
   }
 }
